--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 
 
 
-<head></head>
+<head>
+    <style>
+        h1 {color:red;}
+        p {color:blue;}
+      </style>
+</head>
 <body><header>Hello</header></body>
 </html>
